Add ESLint with Airbnb configuration and fix linting issues

--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-    "name": "vue-course-hw",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "test"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Ealinn/vue-course-hw.git"
-    },
-    "author": "Olha Tokarenko",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/Ealinn/vue-course-hw/issues"
-    },
-    "homepage": "https://github.com/Ealinn/vue-course-hw#readme",
-    "dependencies": {
-        "lodash": "^4.17.21"
-    },
-    "devDependencies": {
-        "prettier": "^3.2.5"
-    }
+  "name": "vue-course-hw",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ealinn/vue-course-hw.git"
+  },
+  "author": "Olha Tokarenko",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Ealinn/vue-course-hw/issues"
+  },
+  "homepage": "https://github.com/Ealinn/vue-course-hw#readme",
+  "dependencies": {
+    "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "prettier": "^3.2.5"
+  }
 }
