--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "element-plus": "^2.7.6",
     "unplugin-element-plus": "^0.8.0",
-    "vue": "^3.4.29"
+    "vue": "^3.4.29",
+    "vue-yup-form": "^1.0.8",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
